<resources>
    <string name="app_name">Todo</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="silahkan_login_untuk_melanjutkan">Silahkan login untuk melanjutkan</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="lupa_password">Lupa password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="google">Google</string>
    <string name="v1_1_1">v1.1.1</string>
    <string name="logout">Logout</string>
    <string name="selesai">Selesai</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="delete_task">Delete Task</string>
    <string name="simpan">Simpan</string>
    <string name="add_task">Add Task</string>
    <string name="deskripsi_opsional">Deskripsi(Opsional)</string>
    <string name="retrofit">Retrofit</string>
    <string name="room">Room</string>
    <string name="akun">Akun</string>

</resources>