<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login untuk melanjutkan"
                android:textAppearance="@style/TypographyStyles.Text1.Bold"
                android:textColor="@color/dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Masukkan email dan Password"
                android:textAppearance="@style/TypographyStyles.Text4"
                android:textColor="@color/grey6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textAppearance="@style/TypographyStyles.Text1"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/kata_sandi"
                    android:inputType="textPassword"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textAppearance="@style/TypographyStyles.Text1"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_15sdp"
                android:ellipsize="marquee"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="0dp"
                android:text="@string/login"
                android:textAppearance="@style/TypographyStyles.Text2"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/belum_punya_akun"
                    android:textAppearance="@style/TypographyStyles.Text3.Bold" />

                <TextView
                    android:id="@+id/btn_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/daftar"
                    android:textAppearance="@style/TypographyStyles.Text3.Bold"
                    android:textColor="#B97447"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/v1_1_1"
        android:textAppearance="@style/TypographyStyles.Text4"
        android:textColor="@color/grey9" />

</RelativeLayout>