<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_height"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            style="@style/Base.AppTabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/btn_close"
            android:text="@string/add_task"
            android:textAppearance="@style/TypographyStyles.Text3"
            android:textColor="@color/gray2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="@style/Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_height"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/delete_task"
                android:textColor="@color/red3"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="@style/Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/large_height"
                android:text="@string/simpan" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_below="@id/toolbar_layout"
        android:background="@color/gray4" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textAppearance="@style/TypographyStyles.Text2"
                android:textColor="@color/gray2" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="@+id/product_name_label"
                app:layout_constraintStart_toStartOf="@+id/product_name_label"
                app:layout_constraintTop_toBottomOf="@+id/description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textCapSentences"
                    android:maxLines="2"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textAppearance="@style/TypographyStyles.Text3"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/gray3"
                    tools:text="Title" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/deskripsi_opsional"
                android:textAppearance="@style/TypographyStyles.Text2"
                android:textColor="@color/gray2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_description"
                style="@style/TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@+id/product_name_label"
                app:layout_constraintStart_toStartOf="@+id/product_name_label"
                app:layout_constraintTop_toBottomOf="@+id/description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="@dimen/_44sdp"
                    android:minLines="5"
                    android:textAppearance="@style/TypographyStyles.Text3"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/gray3"
                    tools:text="Deskripsi" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>